--- a/style.css
+++ b/style.css
@@ -211,10 +211,9 @@ section img{
   cursor: pointer;
 }
 section .rating{
-  height: 225px;
+  height: 450px;
   width: 250px;
   display: flex;
-  background-color: yellow;
   flex-direction: column;
 
 }
@@ -222,5 +221,14 @@ section .rating{
   font-size: 34px;
   line-height: 43px;
   font-weight: 400;
-  color: wheat;
+  color: white;
+}
+.rating .ratingApple{
+  display: flex;
+  flex-direction: row;
+
+}
+.ratingApple img{
+  height: 200px;
+  width: 450px;
 }
