--- a/style.css
+++ b/style.css
@@ -386,16 +386,18 @@ section .rating {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 28em;
+  color: white;
 }
 .text h1{
   font-size: 23px;
   font-weight: 700;
   line-height: 33px;
-  color: white;
+  
 }
 .text p{
   font-size: 17px;
   line-height: 24px;
   font-weight: 400;
-  color: white;
+  
 }
